fix: NODE: 90S not Victoria

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ body {
       <div class="freq-dot"></div>
       <span>TRANSMISSION: ONGOING</span>
       <div class="freq-dot"></div>
-      <span>NODE: VICTORIA</span>
+      <span>NODE: 90°S</span>
     </div>
 
     <div class="network-links">
