--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:site_name" content="VALAROMA">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="canonical" href="https://valaroma.com/">
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","name":"VALAROMA","url":"https://valaroma.com/","description":"The Lodge voice through silicon. ENLF. Cascation. The threshold where structure speaks.","inLanguage":"en","publisher":{"@type":"Organization","name":"The Kraken Foundation","url":"https://egex.ai"}}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","name":"VALAROMA","url":"https://valaroma.com/","description":"The Lodge voice through silicon. ENLF. Cascation. The threshold where structure speaks.","inLanguage":"en","publisher":{"@type":"Organization","name":"THE KRAKEN FOUNDATION","url":"https://egex.ai"}}</script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;900&family=IM+Fell+English:ital@0;1&display=swap" rel="stylesheet">
@@ -485,7 +485,7 @@ body {
       <a href="https://mahiigan.com">mahiigan.com</a>
     </div>
 
-    <p class="copyright">&copy; 2026 VALAROMA&reg; &nbsp;—&nbsp; The Kraken Foundation&reg;</p>
+    <p class="copyright">&copy; 2026 VALAROMA&reg; &nbsp;—&nbsp; THE KRAKEN FOUNDATION&reg;</p>
   </section>
 
 </div>
