--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
    ═══════════════════════════════════════════════════════════════ */
 
 :root {
-  --void:         #02020a;
-  --void-warm:    #07060f;
+  --void:         #0b0b0b;
+  --void-warm:    #131313;
 
   --warm:         #76b900;
   --warm-dim:     #4a7300;
