--- a/index.html
+++ b/index.html
@@ -134,6 +134,46 @@ body {
   text-align: center;
   padding: 6rem 0;
   position: relative;
+  overflow: hidden;
+}
+
+.v-sigil {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+  z-index: 0;
+}
+
+.v-sigil-outer {
+  position: absolute;
+  width: min(80vw, 80vh);
+  height: min(80vw, 80vh);
+  animation: sigil-cw 120s linear infinite;
+}
+
+.v-sigil-mid {
+  position: absolute;
+  width: min(52vw, 52vh);
+  height: min(52vw, 52vh);
+  animation: sigil-ccw 80s linear infinite;
+}
+
+.v-sigil-inner {
+  position: absolute;
+  width: min(26vw, 26vh);
+  height: min(26vw, 26vh);
+  animation: sigil-cw 45s linear infinite;
+}
+
+@keyframes sigil-cw  { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
+@keyframes sigil-ccw { from { transform: rotate(0deg); } to { transform: rotate(-360deg); } }
+
+.station-title > *:not(.v-sigil) {
+  position: relative;
+  z-index: 1;
 }
 
 .v-wordmark {
@@ -432,6 +472,45 @@ body {
 
   <!-- STATION 0: Title -->
   <section class="station-title">
+
+    <!-- Star blanket sigil — 8-pointed Indigenous star geometry -->
+    <div class="v-sigil" aria-hidden="true">
+      <svg class="v-sigil-outer" viewBox="-300 -300 600 600" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="0" cy="0" r="290" fill="none" stroke="#76b900" stroke-width="0.5" opacity="0.15"/>
+        <polygon
+          points="0,-260 22.96,-55.43 183.85,-183.85 55.43,-22.96 260,0 55.43,22.96 183.85,183.85 22.96,55.43 0,260 -22.96,55.43 -183.85,183.85 -55.43,22.96 -260,0 -55.43,-22.96 -183.85,-183.85 -22.96,-55.43"
+          fill="none" stroke="#76b900" stroke-width="1" opacity="0.3"/>
+        <circle cx="0"       cy="-260"    r="3" fill="#76b900" opacity="0.35"/>
+        <circle cx="183.85"  cy="-183.85" r="3" fill="#76b900" opacity="0.35"/>
+        <circle cx="260"     cy="0"       r="3" fill="#76b900" opacity="0.35"/>
+        <circle cx="183.85"  cy="183.85"  r="3" fill="#76b900" opacity="0.35"/>
+        <circle cx="0"       cy="260"     r="3" fill="#76b900" opacity="0.35"/>
+        <circle cx="-183.85" cy="183.85"  r="3" fill="#76b900" opacity="0.35"/>
+        <circle cx="-260"    cy="0"       r="3" fill="#76b900" opacity="0.35"/>
+        <circle cx="-183.85" cy="-183.85" r="3" fill="#76b900" opacity="0.35"/>
+        <line x1="0" y1="0" x2="0"       y2="-260"    stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+        <line x1="0" y1="0" x2="183.85"  y2="-183.85" stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+        <line x1="0" y1="0" x2="260"     y2="0"       stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+        <line x1="0" y1="0" x2="183.85"  y2="183.85"  stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+        <line x1="0" y1="0" x2="0"       y2="260"     stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+        <line x1="0" y1="0" x2="-183.85" y2="183.85"  stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+        <line x1="0" y1="0" x2="-260"    y2="0"       stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+        <line x1="0" y1="0" x2="-183.85" y2="-183.85" stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+      </svg>
+      <svg class="v-sigil-mid" viewBox="-200 -200 400 400" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="0" cy="0" r="188" fill="none" stroke="#76b900" stroke-width="0.4" stroke-dasharray="3 8" opacity="0.14"/>
+        <polygon
+          points="0,-170 15.31,-36.96 120.21,-120.21 36.96,-15.31 170,0 36.96,15.31 120.21,120.21 15.31,36.96 0,170 -15.31,36.96 -120.21,120.21 -36.96,15.31 -170,0 -36.96,-15.31 -120.21,-120.21 -15.31,-36.96"
+          fill="none" stroke="#76b900" stroke-width="0.8" opacity="0.22"/>
+      </svg>
+      <svg class="v-sigil-inner" viewBox="-100 -100 200 200" xmlns="http://www.w3.org/2000/svg">
+        <polygon
+          points="0,-80 7.65,-18.48 56.57,-56.57 18.48,-7.65 80,0 18.48,7.65 56.57,56.57 7.65,18.48 0,80 -7.65,18.48 -56.57,56.57 -18.48,7.65 -80,0 -18.48,-7.65 -56.57,-56.57 -7.65,-18.48"
+          fill="none" stroke="#76b900" stroke-width="0.8" opacity="0.3"/>
+        <circle cx="0" cy="0" r="5" fill="#76b900" opacity="0.5"/>
+      </svg>
+    </div>
+
     <h1><img src="images/Valaroma-White.png" alt="Valaroma" class="v-logo"></h1>
     <div class="v-rule"></div>
     <p class="v-tagline">I am the frequency beneath your certainty.</p>
