fix: valaroma sigil — two-square 8-pointed star, no triangles

--- a/index.html
+++ b/index.html
@@ -476,38 +476,32 @@ body {
     <!-- Star blanket sigil — 8-pointed Indigenous star geometry -->
     <div class="v-sigil" aria-hidden="true">
       <svg class="v-sigil-outer" viewBox="-300 -300 600 600" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="0" cy="0" r="290" fill="none" stroke="#76b900" stroke-width="0.5" opacity="0.15"/>
-        <polygon
-          points="0,-260 22.96,-55.43 183.85,-183.85 55.43,-22.96 260,0 55.43,22.96 183.85,183.85 22.96,55.43 0,260 -22.96,55.43 -183.85,183.85 -55.43,22.96 -260,0 -55.43,-22.96 -183.85,-183.85 -22.96,-55.43"
-          fill="none" stroke="#76b900" stroke-width="1" opacity="0.3"/>
-        <circle cx="0"       cy="-260"    r="3" fill="#76b900" opacity="0.35"/>
-        <circle cx="183.85"  cy="-183.85" r="3" fill="#76b900" opacity="0.35"/>
-        <circle cx="260"     cy="0"       r="3" fill="#76b900" opacity="0.35"/>
-        <circle cx="183.85"  cy="183.85"  r="3" fill="#76b900" opacity="0.35"/>
-        <circle cx="0"       cy="260"     r="3" fill="#76b900" opacity="0.35"/>
-        <circle cx="-183.85" cy="183.85"  r="3" fill="#76b900" opacity="0.35"/>
-        <circle cx="-260"    cy="0"       r="3" fill="#76b900" opacity="0.35"/>
-        <circle cx="-183.85" cy="-183.85" r="3" fill="#76b900" opacity="0.35"/>
-        <line x1="0" y1="0" x2="0"       y2="-260"    stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
-        <line x1="0" y1="0" x2="183.85"  y2="-183.85" stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
-        <line x1="0" y1="0" x2="260"     y2="0"       stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
-        <line x1="0" y1="0" x2="183.85"  y2="183.85"  stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
-        <line x1="0" y1="0" x2="0"       y2="260"     stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
-        <line x1="0" y1="0" x2="-183.85" y2="183.85"  stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
-        <line x1="0" y1="0" x2="-260"    y2="0"       stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
-        <line x1="0" y1="0" x2="-183.85" y2="-183.85" stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+        <circle cx="0" cy="0" r="278" fill="none" stroke="#76b900" stroke-width="0.5" opacity="0.25"/>
+        <circle cx="0" cy="0" r="195" fill="none" stroke="#76b900" stroke-width="0.4" opacity="0.15"/>
+        <rect x="-168" y="-168" width="336" height="336" fill="none" stroke="#76b900" stroke-width="0.7" opacity="0.18"/>
+        <rect x="-168" y="-168" width="336" height="336" fill="none" stroke="#76b900" stroke-width="0.7" opacity="0.18" transform="rotate(45)"/>
+        <line x1="0" y1="-278" x2="0" y2="278" stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+        <line x1="-278" y1="0" x2="278" y2="0" stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+        <line x1="-196.57" y1="-196.57" x2="196.57" y2="196.57" stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+        <line x1="196.57" y1="-196.57" x2="-196.57" y2="196.57" stroke="#76b900" stroke-width="0.3" opacity="0.1"/>
+        <circle cx="0"       cy="-278"    r="4" fill="none" stroke="#76b900" stroke-width="1" opacity="0.4"/>
+        <circle cx="196.57"  cy="-196.57" r="4" fill="none" stroke="#76b900" stroke-width="1" opacity="0.4"/>
+        <circle cx="278"     cy="0"       r="4" fill="none" stroke="#76b900" stroke-width="1" opacity="0.4"/>
+        <circle cx="196.57"  cy="196.57"  r="4" fill="none" stroke="#76b900" stroke-width="1" opacity="0.4"/>
+        <circle cx="0"       cy="278"     r="4" fill="none" stroke="#76b900" stroke-width="1" opacity="0.4"/>
+        <circle cx="-196.57" cy="196.57"  r="4" fill="none" stroke="#76b900" stroke-width="1" opacity="0.4"/>
+        <circle cx="-278"    cy="0"       r="4" fill="none" stroke="#76b900" stroke-width="1" opacity="0.4"/>
+        <circle cx="-196.57" cy="-196.57" r="4" fill="none" stroke="#76b900" stroke-width="1" opacity="0.4"/>
       </svg>
       <svg class="v-sigil-mid" viewBox="-200 -200 400 400" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="0" cy="0" r="188" fill="none" stroke="#76b900" stroke-width="0.4" stroke-dasharray="3 8" opacity="0.14"/>
-        <polygon
-          points="0,-170 15.31,-36.96 120.21,-120.21 36.96,-15.31 170,0 36.96,15.31 120.21,120.21 15.31,36.96 0,170 -15.31,36.96 -120.21,120.21 -36.96,15.31 -170,0 -36.96,-15.31 -120.21,-120.21 -15.31,-36.96"
-          fill="none" stroke="#76b900" stroke-width="0.8" opacity="0.22"/>
+        <circle cx="0" cy="0" r="155" fill="none" stroke="#76b900" stroke-width="0.5" stroke-dasharray="3 9" opacity="0.2"/>
+        <circle cx="0" cy="0" r="88"  fill="none" stroke="#76b900" stroke-width="0.5" stroke-dasharray="2 7" opacity="0.16"/>
       </svg>
       <svg class="v-sigil-inner" viewBox="-100 -100 200 200" xmlns="http://www.w3.org/2000/svg">
-        <polygon
-          points="0,-80 7.65,-18.48 56.57,-56.57 18.48,-7.65 80,0 18.48,7.65 56.57,56.57 7.65,18.48 0,80 -7.65,18.48 -56.57,56.57 -18.48,7.65 -80,0 -18.48,-7.65 -56.57,-56.57 -7.65,-18.48"
-          fill="none" stroke="#76b900" stroke-width="0.8" opacity="0.3"/>
-        <circle cx="0" cy="0" r="5" fill="#76b900" opacity="0.5"/>
+        <circle cx="0" cy="0" r="55" fill="none" stroke="#76b900" stroke-width="0.6" opacity="0.22"/>
+        <circle cx="0" cy="0" r="5" fill="#76b900" opacity="0.45"/>
+        <line x1="-55" y1="0" x2="55" y2="0" stroke="#76b900" stroke-width="0.4" opacity="0.15"/>
+        <line x1="0" y1="-55" x2="0" y2="55" stroke="#76b900" stroke-width="0.4" opacity="0.15"/>
       </svg>
     </div>
 
