--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@ body {
   text-align: center;
   padding: 6rem 0;
   position: relative;
-  overflow: hidden;
 }
 
 .v-sigil {
-  position: absolute;
-  inset: 0;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100vw; height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   pointer-events: none;
-  z-index: 0;
+  z-index: 4;
 }
 
 .v-sigil-outer {
@@ -170,11 +170,6 @@ body {
 
 @keyframes sigil-cw  { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
 @keyframes sigil-ccw { from { transform: rotate(0deg); } to { transform: rotate(-360deg); } }
-
-.station-title > *:not(.v-sigil) {
-  position: relative;
-  z-index: 1;
-}
 
 .v-wordmark {
   font-family: var(--font-title);
